--- a/index.html
+++ b/index.html
@@ -8,103 +8,93 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@1.2.0"></script>
   <style>
     body { 
       font-family: system-ui, -apple-system, sans-serif; 
       margin: 0; 
       background: #0d1117; 
       color: #c9d1d9; 
-      line-height: 1.6; 
+      line-height: 1.5; 
     }
     .main-title { 
       text-align: center; 
       color: #58a6ff; 
-      margin: 30px 0 10px; 
-      font-size: 3em; 
+      margin: 20px 0 5px; 
+      font-size: 2.2em; 
       font-weight: 700; 
     }
     .subtitle { 
       text-align: center; 
       color: #8b949e; 
-      margin-bottom: 30px; 
-      font-size: 1.3em; 
+      margin-bottom: 15px; 
+      font-size: 1em; 
     }
     .container { 
       display: flex; 
       flex-wrap: wrap; 
-      gap: 30px; 
-      max-width: 1600px; 
+      gap: 20px; 
+      max-width: 1400px; 
       margin: 0 auto; 
-      padding: 0 20px; 
+      padding: 0 15px; 
     }
     .chart-area { 
       flex: 3; 
-      min-width: 700px; 
-      height: 800px; 
+      min-width: 600px; 
+      height: 600px; 
       background: #161b22; 
-      border-radius: 16px; 
-      padding: 25px; 
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
+      border-radius: 12px; 
+      padding: 15px; 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
     }
     .sidebar { 
       flex: 1; 
-      min-width: 340px; 
+      min-width: 300px; 
       background: #161b22; 
-      padding: 25px; 
-      border-radius: 16px; 
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
+      padding: 15px; 
+      border-radius: 12px; 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
       overflow-y: auto; 
-      max-height: 800px; 
+      max-height: 600px; 
     }
     .status-badge { 
-      font-size: 3em; 
-      margin: 0 0 30px; 
-      padding: 20px; 
-      border-radius: 16px; 
+      font-size: 2em; 
+      margin: 0 0 15px; 
+      padding: 10px; 
+      border-radius: 8px; 
       text-align: center; 
       font-weight: 700; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5); 
     }
     .price-item { 
-      margin: 20px 0; 
-      padding: 18px; 
-      border-radius: 12px; 
+      margin: 10px 0; 
+      padding: 12px; 
+      border-radius: 8px; 
       background: #21262d; 
       transition: all 0.2s; 
     }
     .price-item:hover { 
-      transform: translateY(-4px); 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
+      transform: translateY(-2px); 
+      box-shadow: 0 6px 20px rgba(0,0,0,0.4); 
     }
     #alertBox, #actionAdvice, #previousCalls, #predictionAccuracy { 
-      margin: 30px 0; 
-      padding: 20px; 
-      border-radius: 12px; 
-      font-size: 1.4em; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.4); 
+      margin: 15px 0; 
+      padding: 12px; 
+      border-radius: 8px; 
+      font-size: 1.1em; 
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4); 
     }
     #actionAdvice { background: #2c0e0e; color: #ff6b6b; }
     #previousCalls { background: #161b22; border: 1px solid #30363d; }
     #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
-    #confidenceGauge { width: 200px; height: 200px; margin: 30px auto; }
-    .phase-bar { height: 40px; width: 100%; margin: 0 0 20px 0; border-radius: 12px; overflow: hidden; display: flex; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
-    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
-    .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
-    .collapsible-section { margin: 15px 0; }
-    .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; font-weight: bold; transition: all 0.2s; }
-    .collapsible-content { display: none; padding: 10px; background: #161b22; border-radius: 0 0 8px 8px; }
+    #confidenceGauge { width: 150px; height: 150px; margin: 20px auto; }
+    .phase-bar { height: 30px; width: 100%; margin: 0 0 10px 0; border-radius: 8px; overflow: hidden; display: flex; box-shadow: 0 3px 15px rgba(0,0,0,0.5); }
+    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; }
+    .loading { color: #8b949e; text-align: center; margin: 15px 0; font-style: italic; }
+    .collapsible-section { margin: 10px 0; }
+    .collapsible-header { cursor: pointer; padding: 8px; background: #21262d; border-radius: 6px; font-weight: bold; transition: all 0.2s; }
+    .collapsible-content { display: none; padding: 8px; background: #161b22; border-radius: 0 0 6px 6px; }
     .open .collapsible-content { display: block; }
-    .drawing-toggle { 
-      background: #21262d; 
-      color: #c9d1d9; 
-      border: 1px solid #30363d; 
-      padding: 10px 15px; 
-      border-radius: 8px; 
-      cursor: pointer; 
-      margin-bottom: 20px; 
-      transition: all 0.2s; 
-    }
-    .drawing-toggle.active { background: #58a6ff; color: white; border-color: #58a6ff; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
@@ -122,7 +112,6 @@
         <div class="phase-segment" style="background:#4caf50;">Current</div>
       </div>
       <canvas id="myChart"></canvas>
-      <button class="drawing-toggle" id="toggleDrawing">Toggle Drawing Mode (Off)</button>
     </div>
 
     <div class="sidebar">
@@ -240,78 +229,112 @@
       }
     });
 
-    // === DRAWING TOOL ===
-    let drawingEnabled = false;
-    let drawing = false;
-    let startX, startY;
-    let drawings = JSON.parse(localStorage.getItem('drawings')) || [];
+    // === LIVE PRICES ===
+    async function fetchLiveData() {
+      try {
+        const cgRes = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h');
+        const cgData = await cgRes.json();
 
-    const toggleDrawingBtn = document.getElementById('toggleDrawing');
-    toggleDrawingBtn.addEventListener('click', () => {
-      drawingEnabled = !drawingEnabled;
-      toggleDrawingBtn.textContent = drawingEnabled ? 'Drawing Mode: On (click to toggle off)' : 'Drawing Mode: Off (click to toggle on)';
-      toggleDrawingBtn.classList.toggle('active', drawingEnabled);
-    });
+        const pricesDiv = document.getElementById('prices');
+        pricesDiv.innerHTML = '';
 
-    ctx.canvas.addEventListener('mousedown', (e) => {
-      if (!drawingEnabled) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      startX = e.clientX - rect.left;
-      startY = e.clientY - rect.top;
-      drawing = true;
-    });
+        const liveAssets = [
+          { name: 'Bitcoin (BTC)', price: `$${cgData[0].current_price.toLocaleString()}`, change: `${cgData[0].price_change_percentage_24h.toFixed(2)}%`, link: 'https://coinmarketcap.com/currencies/bitcoin/' },
+          { name: 'Ethereum (ETH)', price: `$${cgData[1].current_price.toLocaleString()}`, change: `${cgData[1].price_change_percentage_24h.toFixed(2)}%`, link: 'https://coinmarketcap.com/currencies/ethereum/' },
+          { name: 'Solana (SOL)', price: `$${cgData[2].current_price.toLocaleString()}`, change: `${cgData[2].price_change_percentage_24h.toFixed(2)}%`, link: 'https://coinmarketcap.com/currencies/solana/' },
+          { name: 'BNB (BNB)', price: `$${cgData[3].current_price.toLocaleString()}`, change: `${cgData[3].price_change_percentage_24h.toFixed(2)}%`, link: 'https://coinmarketcap.com/currencies/bnb/' }
+        ];
 
-    ctx.canvas.addEventListener('mousemove', (e) => {
-      if (!drawing) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      const endX = e.clientX - rect.left;
-      const endY = e.clientY - rect.top;
-      // Preview line
-      ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
-      ctx.beginPath();
-      ctx.moveTo(startX, startY);
-      ctx.lineTo(endX, endY);
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.globalAlpha = 0.6;
-      ctx.stroke();
-    });
+        liveAssets.forEach(asset => {
+          const div = document.createElement('div');
+          div.className = 'price-item';
+          div.innerHTML = `
+            <strong>${asset.name}</strong><br>
+            <span style="font-size:1.4em;">${asset.price}</span> 
+            <span style="color:${asset.change.includes('+') ? '#56d364' : '#f85149'};">${asset.change}</span><br>
+            <a href="${asset.link}" target="_blank">Live Chart →</a>
+          `;
+          pricesDiv.appendChild(div);
+        });
+      } catch (e) {
+        document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed (refresh page)</p>';
+      }
+    }
+    fetchLiveData();
 
-    ctx.canvas.addEventListener('mouseup', (e) => {
-      if (!drawingEnabled || !drawing) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      const endX = e.clientX - rect.left;
-      const endY = e.clientY - rect.top;
-      drawings.push({ startX, startY, endX, endY });
-      localStorage.setItem('drawings', JSON.stringify(drawings));
-      drawing = false;
-      chart.update(); // Redraw annotations
-    });
+    // === LOCALSTORAGE ===
+    function saveCall(type, value) {
+      const timestamp = new Date().toLocaleString();
+      const callData = { type, timestamp, value };
+      let calls = JSON.parse(localStorage.getItem('flowCalls')) || [];
+      calls.unshift(callData);
+      if (calls.length > 5) calls = calls.slice(0, 5);
+      localStorage.setItem('flowCalls', JSON.stringify(calls));
+      updatePreviousCalls();
+    }
 
-    ctx.canvas.addEventListener('dblclick', () => {
-      if (!drawingEnabled) return;
-      drawings = [];
-      localStorage.setItem('drawings', JSON.stringify(drawings));
-      chart.update();
-    });
+    function updatePreviousCalls() {
+      const calls = JSON.parse(localStorage.getItem('flowCalls')) || [];
+      const div = document.getElementById('previousCalls');
+      div.innerHTML = '<strong>Previous Calls:</strong><br>';
+      if (calls.length === 0) {
+        div.innerHTML += 'No calls recorded yet.';
+      } else {
+        calls.forEach(call => {
+          div.innerHTML += `<strong>${call.type} Call</strong>: ${call.timestamp} – Index ${call.value}<br>`;
+        });
+      }
+    }
+    updatePreviousCalls();
 
-    // Redraw saved drawings
-    drawings.forEach(d => {
-      chart.options.plugins.annotation.annotations.push({
-        type: 'line',
-        xMin: d.startX,
-        xMax: d.endX,
-        yMin: d.startY,
-        yMax: d.endY,
-        borderColor: 'white',
-        borderWidth: 2,
-        borderDash: [5, 5],
-        label: { enabled: false }
-      });
-    });
+    // === ALERTS & SELL ADVICE ===
+    const currentIndex = predictorIndex[predictorIndex.length - 10];
+    const alertBox = document.getElementById('alertBox');
+    const actionAdvice = document.getElementById('actionAdvice');
+    const statusBadge = document.getElementById('statusBadge');
+    const predictionsBox = document.getElementById('predictionsBox');
+    const predictionAccuracy = document.getElementById('predictionAccuracy');
 
-    // Rest of your script (fetchLiveData, localStorage calls, alerts, sell advice, etc.) remains the same as previous version
-    // ... paste your existing fetchLiveData, saveCall, updatePreviousCalls, alerts, sell advice, etc. here ...
+    let msg = 'Current: Neutral flow.';
+    let actionMsg = 'What you should do right now: Hold or buy dips.';
+    let badge = '🟡 WATCHING';
+    let badgeColor = '#ffeb3b';
+    let predictions = 'Predicted Top: April–July 2026 | Bottom: August–November 2026';
+    let accuracy = 'Prediction vs Live: No deviation yet (forecast to Jan 2028)';
+
+    if (currentIndex < 30) {
+      msg = 'Bottom Alert: Fear low – like Nov 2025 – buy time!';
+      actionMsg = 'What you should do right now: Consider buying.';
+      badge = '🟢 BUY ZONE';
+      badgeColor = '#4caf50';
+      saveCall('Bottom', currentIndex);
+    } else if (currentIndex > 90) {
+      msg = 'Heavy Sell Alert: Euphoria peak – full sell now!';
+      actionMsg = 'What you should do right now: You should be 100% out now.';
+      badge = '🔴 FULL SELL';
+      badgeColor = '#f44336';
+      saveCall('Top', currentIndex);
+    } else if (currentIndex > 80) {
+      msg = 'Sell Alert: Euphoria building – start selling.';
+      actionMsg = 'What you should do right now: You should be 50–80% out now.';
+      badge = '🟠 START SELLING';
+      badgeColor = '#ff9800';
+      saveCall('Top Warning', currentIndex);
+    }
+
+    alertBox.innerHTML = `<strong>Flow Cycle Alert:</strong> ${msg}`;
+    alertBox.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
+
+    actionAdvice.innerHTML = actionMsg;
+    actionAdvice.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
+
+    statusBadge.innerHTML = badge;
+    statusBadge.style.background = badgeColor;
+    statusBadge.style.color = 'white';
+
+    predictionsBox.innerHTML = `<strong>Current Predictions:</strong> ${predictions}`;
+
+    predictionAccuracy.innerHTML = accuracy;
   </script>
 </body>
 </html>
