--- a/index.html
+++ b/index.html
@@ -16,67 +16,79 @@
       color: #c9d1d9; 
       line-height: 1.5; 
     }
-    .main-title { 
-      text-align: center; 
-      color: #58a6ff; 
-      margin: 20px 0 5px; 
-      font-size: 2.5em; 
-      font-weight: 700; 
-    }
-    .subtitle { 
-      text-align: center; 
-      color: #8b949e; 
-      margin-bottom: 20px; 
-      font-size: 1.1em; 
-    }
-    .container { 
+    .top-menu { 
+      background: #0d1117; 
+      border-bottom: 1px solid #30363d; 
+      padding: 10px 20px; 
       display: flex; 
-      flex-wrap: wrap; 
       gap: 20px; 
-      max-width: 1400px; 
-      margin: 0 auto; 
-      padding: 0 15px; 
+      align-items: center; 
     }
-    .chart-area { 
-      flex: 3; 
-      min-width: 600px; 
-      height: 600px; 
-      background: #161b22; 
-      border-radius: 12px; 
+    .menu-item { 
+      color: #58a6ff; 
+      cursor: pointer; 
+      font-size: 1.1em; 
+      transition: all 0.2s; 
+    }
+    .menu-item:hover { color: white; }
+    .container { 
+      display: grid; 
+      grid-template-columns: 60px 1fr 300px; 
+      grid-template-rows: auto 200px; 
+      gap: 15px; 
+      max-width: 1600px; 
+      margin: 0 auto; 
       padding: 15px; 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
-      position: relative; 
     }
     .drawing-toolbar { 
-      position: absolute; 
-      left: 10px; 
-      top: 50px; 
-      background: #21262d; 
+      grid-column: 1 / 2; 
+      grid-row: 1 / 2; 
+      background: #161b22; 
       border-radius: 8px; 
-      padding: 10px 5px; 
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5); 
+      padding: 10px; 
       display: flex; 
       flex-direction: column; 
-      gap: 10px; 
+      gap: 15px; 
+      align-items: center; 
     }
     .tool-icon { 
       cursor: pointer; 
-      font-size: 1.5em; 
+      font-size: 1.4em; 
       padding: 8px; 
       border-radius: 6px; 
       transition: all 0.2s; 
     }
     .tool-icon.active { background: #58a6ff; color: white; }
     .tool-icon:hover { background: #30363d; }
-    .sidebar { 
-      flex: 1; 
-      min-width: 300px; 
+    .chart-main { 
+      grid-column: 2 / 3; 
+      grid-row: 1 / 2; 
+      height: 400px; 
       background: #161b22; 
+      border-radius: 8px; 
       padding: 15px; 
-      border-radius: 12px; 
       box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
-      overflow-y: auto; 
-      max-height: 600px; 
+    }
+    .order-book { 
+      grid-column: 3 / 4; 
+      grid-row: 1 / 3; 
+      background: #161b22; 
+      border-radius: 8px; 
+      padding: 15px; 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
+    }
+    .bottom-panels { 
+      grid-column: 1 / 3; 
+      grid-row: 2 / 3; 
+      display: flex; 
+      gap: 15px; 
+    }
+    .panel { 
+      flex: 1; 
+      background: #161b22; 
+      border-radius: 8px; 
+      padding: 15px; 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6); 
     }
     .status-badge { 
       font-size: 2em; 
@@ -109,14 +121,14 @@
     #previousCalls { background: #161b22; border: 1px solid #30363d; }
     #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
     #confidenceGauge { width: 150px; height: 150px; margin: 20px auto; }
-    .phase-bar { height: 30px; width: 100%; margin: 0 0 10px 0; border-radius: 8px; overflow: hidden; display: flex; box-shadow: 0 3px 15px rgba(0,0,0,0.5); }
+    .phase-bar { height: 30px; width: 100%; margin: 0 0 15px 0; border-radius: 8px; overflow: hidden; display: flex; box-shadow: 0 3px 15px rgba(0,0,0,0.5); }
     .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; }
     .loading { color: #8b949e; text-align: center; margin: 15px 0; font-style: italic; }
     .collapsible-section { margin: 10px 0; }
     .collapsible-header { cursor: pointer; padding: 8px; background: #21262d; border-radius: 6px; font-weight: bold; transition: all 0.2s; }
     .collapsible-content { display: none; padding: 8px; background: #161b22; border-radius: 0 0 6px 6px; }
     .open .collapsible-content { display: block; }
-    .phase-toggle { 
+    .drawing-toggle { 
       background: #21262d; 
       color: #c9d1d9; 
       border: 1px solid #30363d; 
@@ -126,7 +138,7 @@
       margin-bottom: 15px; 
       transition: all 0.2s; 
     }
-    .phase-toggle.active { background: #58a6ff; color: white; border-color: #58a6ff; }
+    .drawing-toggle.active { background: #58a6ff; color: white; border-color: #58a6ff; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
@@ -137,7 +149,7 @@
   <div class="container">
     <div class="chart-area">
       <div class="drawing-toolbar">
-        <div class="tool-icon" data-tool="crosshair" title="Crosshair">+ </div>
+        <div class="tool-icon" data-tool="crosshair" title="Crosshair"> + </div>
         <div class="tool-icon" data-tool="line" title="Line"> - </div>
         <div class="tool-icon" data-tool="horizontal" title="Horizontal Line"> = </div>
         <div class="tool-icon" data-tool="trend" title="Trend Line"> / </div>
@@ -150,7 +162,6 @@
         <div class="tool-icon" data-tool="trash" title="Clear All"> 🗑 </div>
       </div>
       <canvas id="myChart"></canvas>
-      <button class="phase-toggle" id="togglePhaseBar">Toggle Phase Bar (On)</button>
     </div>
 
     <div class="sidebar">
@@ -266,88 +277,6 @@
           }
         }
       }
-    });
-
-    // === DRAWING TOOL ===
-    let activeTool = 'crosshair'; // Default
-    let drawing = false;
-    let startX, startY;
-    let drawings = JSON.parse(localStorage.getItem('drawings')) || [];
-
-    document.querySelectorAll('.tool-icon').forEach(icon => {
-      icon.addEventListener('click', () => {
-        document.querySelectorAll('.tool-icon').forEach(i => i.classList.remove('active'));
-        icon.classList.add('active');
-        activeTool = icon.dataset.tool;
-        if (activeTool === 'trash') {
-          drawings = [];
-          localStorage.setItem('drawings', JSON.stringify(drawings));
-          chart.update();
-        } else if (activeTool === 'hide') {
-          // Hide all drawings (toggle visibility)
-          chart.options.plugins.annotation.annotations.forEach(anno => {
-            if (anno.type === 'line') anno.display = !anno.display;
-          });
-          chart.update();
-        }
-      });
-    });
-
-    ctx.canvas.addEventListener('mousedown', (e) => {
-      if (activeTool === 'line' || activeTool === 'trend' || activeTool === 'horizontal' || activeTool === 'rectangle') {
-        const rect = ctx.canvas.getBoundingClientRect();
-        startX = e.clientX - rect.left;
-        startY = e.clientY - rect.top;
-        drawing = true;
-      }
-    });
-
-    ctx.canvas.addEventListener('mousemove', (e) => {
-      if (!drawing) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      const endX = e.clientX - rect.left;
-      const endY = e.clientY - rect.top;
-      // Preview line
-      ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
-      ctx.beginPath();
-      ctx.moveTo(startX, startY);
-      ctx.lineTo(endX, endY);
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.globalAlpha = 0.6;
-      ctx.stroke();
-    });
-
-    ctx.canvas.addEventListener('mouseup', (e) => {
-      if (!drawing) return;
-      const rect = ctx.canvas.getBoundingClientRect();
-      const endX = e.clientX - rect.left;
-      const endY = e.clientY - rect.top;
-      drawings.push({ startX, startY, endX, endY });
-      localStorage.setItem('drawings', JSON.stringify(drawings));
-      drawing = false;
-      chart.update();
-    });
-
-    ctx.canvas.addEventListener('dblclick', () => {
-      drawings = [];
-      localStorage.setItem('drawings', JSON.stringify(drawings));
-      chart.update();
-    });
-
-    // Redraw saved drawings
-    drawings.forEach(d => {
-      chart.options.plugins.annotation.annotations.push({
-        type: 'line',
-        xMin: d.startX,
-        xMax: d.endX,
-        yMin: d.startY,
-        yMax: d.endY,
-        borderColor: 'white',
-        borderWidth: 2,
-        borderDash: [5, 5],
-        label: { enabled: false }
-      });
     });
 
     // === LIVE PRICES ===
